--- a/my_app/static/index.html
+++ b/my_app/static/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1> kuliaev-diplom!</h1>
-    <p> my_app_nginx</p>
+    <img src="kuliaev_diplom_360p.gif" alt="GIF" />
 </body>
 </html>
