--- a/my_app/static/index.html
+++ b/my_app/static/index.html
@@ -1,4 +1,33 @@
 <!DOCTYPE html>
+<html>
+<head>
+    <title>kuliaev-diplom</title>
+    <style>
+        .container {
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        .responsive-gif {
+            max-width: 100%;
+            max-height: 100%;
+            width: auto;
+            height: auto;
+            object-fit: contain;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img src="/static/kuliaev_diplom_360p.gif" 
+             alt="Diploma Animation"
+             class="responsive-gif">
+    </div>
+</body>
+</html><!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8" />
