--- a/my_app/static/index.html
+++ b/my_app/static/index.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>kuliaev-diplom</title>
+    <title>Diploma Project</title>
     <style>
-        .container {
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        html, body {
             width: 100%;
-            height: 100vh;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        .container {
+            min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
+            background: #f0f0f0;
+            padding: 20px;
         }
-        
+
         .responsive-gif {
             max-width: 100%;
-            max-height: 100%;
+            max-height: 90vh;
             width: auto;
             height: auto;
             object-fit: contain;
+            border: 2px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
     </style>
 </head>
@@ -26,15 +42,5 @@
              alt="Diploma Animation"
              class="responsive-gif">
     </div>
-</body>
-</html><!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8" />
-    <title><kuliaev-diplom></kuliaev-diplom></title>
-</head>
-<body>
-    <h1> kuliaev-diplom!</h1>
-    <img src="kuliaev_diplom_360p.gif" alt="GIF" />
 </body>
 </html>
