--- a/my_app/static/index.html
+++ b/my_app/static/index.html
@@ -3,44 +3,34 @@
 <head>
     <title>Diploma Project</title>
     <style>
-        * {
+        body {
             margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        html, body {
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
-
-        .container {
-            min-height: 100vh;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            background: #f0f0f0;
-            padding: 20px;
+            background: white;
+            overflow: hidden;
         }
-
-        .responsive-gif {
+        
+        .gif-container {
             max-width: 100%;
-            max-height: 90vh;
+            max-height: 100%;
+        }
+        
+        .gif-container img {
             width: auto;
             height: auto;
+            max-width: 100%;
+            max-height: 100%;
             object-fit: contain;
-            border: 2px solid #ddd;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <img src="/static/kuliaev_diplom_360p.gif" 
-             alt="Diploma Animation"
-             class="responsive-gif">
+    <div class="gif-container">
+        <img src="./kuliaev_diplom_360p.gif" 
+             alt="Diploma Animation">
     </div>
 </body>
 </html>
