--- a/my_app/static/index.html
+++ b/my_app/static/index.html
@@ -1,33 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Diploma Project</title>
+    <title>kuliaev-diplom 0.1.7</title>
     <style>
-        body {
+        * {
             margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
             height: 100vh;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             background: white;
             overflow: hidden;
+            font-family: Arial, sans-serif;
         }
-        
+
+        .title {
+            font-size: 2.5rem;
+            color: #333;
+            margin-bottom: 1rem;
+            text-align: center;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+        }
+
         .gif-container {
-            max-width: 100%;
-            max-height: 100%;
+            max-width: 90%;
+            max-height: 80vh;
         }
-        
+
         .gif-container img {
             width: auto;
             height: auto;
             max-width: 100%;
             max-height: 100%;
             object-fit: contain;
+            border-radius: 8px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
         }
     </style>
 </head>
 <body>
+    <h1 class="title">kuliaev-diplom</h1>
     <div class="gif-container">
         <img src="./kuliaev_diplom_360p.gif" 
              alt="Diploma Animation">
