--- a/my_app/static/index.html
+++ b/my_app/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>kuliaev-diplom 0.1.7</title>
+    <title>kuliaev-diplom 0.2.0</title>
     <style>
         * {
             margin: 0;
@@ -47,7 +47,7 @@
     </style>
 </head>
 <body>
-    <h1 class="title">kuliaev-diplom</h1>
+    <h1 class="title">kuliaev-diplom 0.2.0</h1>
     <div class="gif-container">
         <img src="./kuliaev_diplom_360p.gif" 
              alt="Diploma Animation">
